# bazel-test-drive

./: .bazelproject  .gitignore  BUILD  BUILD.bazel  DependencyTest.java  DependencyTestKotlin.kt  Example.kt  ExampleTest.kt  Server.kt  TODO.md  WORKSPACE  kotlin.bzl  package.json  tsconfig.json
.github/workflows/: bazel_all.yml
com/example/: BUILD.bazel
